// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`DebugPanel Component Tests can switch to simulated data and display filenames 1`] = `
<div
  class="sc-iqHXzD heCJM"
  data-testid="debug-panel"
>
  <h4
    style="color: black;"
  >
    Debug Panel
  </h4>
  <div
    class="sc-crrtmM KqfJY"
  >
    <label
      class="sc-dQpIV knqZxe"
    >
      <input
        checked=""
        type="radio"
        value="ailab"
      />
      <span
        class="sc-bqyKbq jYLzpr"
      >
        Use AI Lab search
      </span>
    </label>
    <label
      class="sc-dQpIV knqZxe"
    >
      <input
        type="radio"
        value="azure"
      />
      <span
        class="sc-bqyKbq jYLzpr"
      >
        Use Azure AI Search
      </span>
    </label>
    <label
      class="sc-dQpIV knqZxe"
    >
      <input
        type="radio"
        value="simulated"
      />
      <span
        class="sc-bqyKbq jYLzpr"
      >
        Use Simulated Data
      </span>
    </label>
  </div>
  <div
    class="input-container"
  >
    <div>
      <h5>
        Filenames:
      </h5>
      <ul>
        <li>
          <button>
            file1
          </button>
        </li>
        <li>
          <button>
            file2
          </button>
        </li>
        <li>
          <button>
            file3
          </button>
        </li>
      </ul>
    </div>
  </div>
</div>
`;

exports[`DebugPanel Component Tests clicking on a filename button updates the search term 1`] = `
<div
  class="sc-iqHXzD heCJM"
  data-testid="debug-panel"
>
  <h4
    style="color: black;"
  >
    Debug Panel
  </h4>
  <div
    class="sc-crrtmM KqfJY"
  >
    <label
      class="sc-dQpIV knqZxe"
    >
      <input
        checked=""
        type="radio"
        value="ailab"
      />
      <span
        class="sc-bqyKbq jYLzpr"
      >
        Use AI Lab search
      </span>
    </label>
    <label
      class="sc-dQpIV knqZxe"
    >
      <input
        type="radio"
        value="azure"
      />
      <span
        class="sc-bqyKbq jYLzpr"
      >
        Use Azure AI Search
      </span>
    </label>
    <label
      class="sc-dQpIV knqZxe"
    >
      <input
        type="radio"
        value="simulated"
      />
      <span
        class="sc-bqyKbq jYLzpr"
      >
        Use Simulated Data
      </span>
    </label>
  </div>
  <div
    class="input-container"
  >
    <div>
      <h5>
        Filenames:
      </h5>
      <ul>
        <li>
          <button>
            file1
          </button>
        </li>
        <li>
          <button>
            file2
          </button>
        </li>
        <li>
          <button>
            file3
          </button>
        </li>
      </ul>
    </div>
  </div>
</div>
`;

exports[`DebugPanel Component Tests renders radio buttons for search sources 1`] = `
<div
  class="sc-iqHXzD heCJM"
  data-testid="debug-panel"
>
  <h4
    style="color: black;"
  >
    Debug Panel
  </h4>
  <div
    class="sc-crrtmM KqfJY"
  >
    <label
      class="sc-dQpIV knqZxe"
    >
      <input
        checked=""
        type="radio"
        value="ailab"
      />
      <span
        class="sc-bqyKbq jYLzpr"
      >
        Use AI Lab search
      </span>
    </label>
    <label
      class="sc-dQpIV knqZxe"
    >
      <input
        type="radio"
        value="azure"
      />
      <span
        class="sc-bqyKbq jYLzpr"
      >
        Use Azure AI Search
      </span>
    </label>
    <label
      class="sc-dQpIV knqZxe"
    >
      <input
        type="radio"
        value="simulated"
      />
      <span
        class="sc-bqyKbq jYLzpr"
      >
        Use Simulated Data
      </span>
    </label>
  </div>
</div>
`;
